[kbss-cvut/termit-ui#291] Update Vocabulary model to support multilingual label and description.
Update related code so that compilation and tests pass.